tests/NormalTests/paczka1/fuzzy1/79279663.err
Error in line 10: 3uO5 A965 93,3
Error in line 15: 3uO5 A950 59,6
Error in line 23: 3uO5 A562 54,8
Error in line 21: q7rpjzHv A562 42,1
Error in line 34: q7rpjzHv A965 82,4
